Implemented image uploading for user profile photo and product images